# ChatClient

./: CMakeLists.txt  README.md  chat.cpp  chat.h  chat.ui  chatbackground.qrc  chats.ui  dialog.cpp  dialog.h  dialog_item.ui  dialogsmanager.cpp  dialogsmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  registration.cpp  registration.h  registration.ui  unregister.cpp  unregister.h  unregister.ui  user_item.cpp  user_item.h  websocketclient.cpp  websocketclient.h
gui/: chat.cpp  chat.h  mainwindow.cpp  popup.cpp  popup.h  registration.cpp
network/: httpclient.cpp  httpclient.h  websocketclient.cpp  websocketclient.h
